# france-api-adresse-rs

./: Cargo.toml  README.md
.forgejo/workflows/: publish.yml
examples/: async.rs  sync-geocode.rs  sync-reverse.rs  sync.rs  unknown-city.rs
src/: async_api.rs  blocking.rs  blocking_api.rs  client.rs  geocode.rs  lib.rs  reverse.rs  types.rs
tests/: geocode.rs
