[package]
name = "france-api-adresse"
version = "0.1.2"
edition = "2024"
description = "A rust wrapper around France's geocoding 'API Adresse'"
license = "MIT"

documentation = "https://docs.rs/france-api-adresse"
homepage = "https://github.com/Frankkkkk/france-api-adresse-rs"
repository = "https://github.com/Frankkkkk/france-api-adresse-rs"
keywords = ["france", "adresse", "BAN", "geocoding"]
categories = ["api-bindings"]


[dependencies]
reqwest = { version = "0.12.22", features = ["blocking"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }

[features]
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
